@@ -15,7 +15,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 
 group = 'github.pitbox46'
-version = '1.16.5-1.0.0-SNAP8'
+version = '1.16.5-1.0.0-SNAP9'
 
 java {
     archivesBaseName = 'eventz'
